[gd_scene load_steps=12 format=3 uid="uid://b88nk2k7c8u7w"]

[ext_resource type="Script" uid="uid://7gbrcb15dsbl" path="res://script/attackerLevel4.gd" id="1_wx5qu"]
[ext_resource type="Texture2D" uid="uid://byilwodvj55yd" path="res://sky_lightened.png" id="2_ummln"]
[ext_resource type="Texture2D" uid="uid://bai0ilin7ncxj" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_1_lightened.png" id="3_qqmhi"]
[ext_resource type="Texture2D" uid="uid://dlqkyteso2ate" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_3.png" id="4_1bxwv"]
[ext_resource type="Texture2D" uid="uid://cvht5puhcrmwt" path="res://assets/Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/clouds_mg_2.png" id="5_3tmk0"]
[ext_resource type="FontFile" uid="uid://ctf2pk0x6asf8" path="res://School Teachers.otf" id="6_ehw0s"]
[ext_resource type="Texture2D" uid="uid://cgp2bccgs4d36" path="res://cloud_lonely.png" id="7_e1ogw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dohx6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4vi7"]
bg_color = Color(0.214923, 0.613613, 0.999999, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ansxa"]
bg_color = Color(0.367501, 0.675869, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 10
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ve8uy"]
bg_color = Color(0.591849, 0.822409, 0.999619, 1)
skew = Vector2(0.05, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 20
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 8
anti_aliasing_size = 10.0

[node name="AttackerLevel4" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wx5qu")

[node name="SkyLightened" type="Sprite2D" parent="."]
position = Vector2(577.75, 335.5)
scale = Vector2(3.08203, 3.13426)
texture = ExtResource("2_ummln")
metadata/_edit_lock_ = true

[node name="CloudsMg1Lightened" type="Sprite2D" parent="."]
position = Vector2(580, 164)
rotation = 3.13636
scale = Vector2(3.0675, 1.54518)
texture = ExtResource("3_qqmhi")
metadata/_edit_lock_ = true

[node name="CloudsMg3" type="Sprite2D" parent="."]
position = Vector2(577, 514)
scale = Vector2(3.0651, 1.0787)
texture = ExtResource("4_1bxwv")
metadata/_edit_lock_ = true

[node name="CloudsMg2" type="Sprite2D" parent="CloudsMg3"]
position = Vector2(0.326249, 5.56216)
scale = Vector2(0.983857, 1.20601)
texture = ExtResource("5_3tmk0")
metadata/_edit_lock_ = true

[node name="HintLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 172.0
offset_top = 339.0
offset_right = 935.0
offset_bottom = 385.0

[node name="InputField" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 240.0
offset_right = 935.0
offset_bottom = 304.0

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 461.0
offset_right = 927.0
offset_bottom = 524.0

[node name="question" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 87.0
offset_right = 918.0
offset_bottom = 200.0
text = "\"A system verifies user access using:
 SELECT * FROM users WHERE username = 'input';

 How can you check if the system is vulnerable without seeing output?\""

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 606.0
offset_right = 94.0
offset_bottom = 638.0
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_color = Color(0, 0.558128, 0.986688, 1)
theme_override_colors/font_pressed_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_fonts/font = ExtResource("6_ehw0s")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_dohx6")
theme_override_styles/hover = SubResource("StyleBoxFlat_a4vi7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ansxa")
theme_override_styles/normal = SubResource("StyleBoxFlat_ve8uy")
text = "Back"

[node name="submitbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 1054.0
offset_top = 601.0
offset_right = 1116.0
offset_bottom = 632.0
text = "submit"

[node name="CloudLonely" type="Sprite2D" parent="."]
position = Vector2(51, 592)
texture = ExtResource("7_e1ogw")

[node name="CloudLonely2" type="Sprite2D" parent="."]
position = Vector2(275, 560)
flip_h = true

[node name="CloudLonely3" type="Sprite2D" parent="."]
position = Vector2(96, 597)
texture = ExtResource("7_e1ogw")

[node name="CloudLonely4" type="Sprite2D" parent="."]
position = Vector2(1153.75, 74.5)
scale = Vector2(0.88151, 0.976852)
texture = ExtResource("7_e1ogw")
flip_h = true
flip_v = true

[node name="CloudLonely5" type="Sprite2D" parent="."]
position = Vector2(1047, 599)
texture = ExtResource("7_e1ogw")

[node name="CloudLonely6" type="Sprite2D" parent="."]
position = Vector2(1022, 170)
texture = ExtResource("7_e1ogw")

[node name="CloudLonely7" type="Sprite2D" parent="."]
position = Vector2(910, 271)
texture = ExtResource("7_e1ogw")

[node name="CloudLonely8" type="Sprite2D" parent="."]
position = Vector2(65, 98)
scale = Vector2(0.661458, 1)
texture = ExtResource("7_e1ogw")
flip_v = true

[node name="level4" type="Label" parent="."]
offset_left = 569.0
offset_top = 37.0
offset_right = 619.0
offset_bottom = 60.0
text = "level 4"

[connection signal="pressed" from="Back" to="." method="_on_goBack_pressed"]
[connection signal="pressed" from="submitbutton" to="." method="_on_SubmitButton_pressed"]
